Update on Overleaf.

--- a/references.bib
+++ b/references.bib
@@ -1,13 +1,15 @@
 @article{hartley2017support,
-  title={Support Vector Machine classification of strong gravitational lenses},
-  author={Hartley, P and Flamary, R and Jackson, N and Tagore, AS and Metcalf, RB},
-  year = "2017",
-  month = "7",
-  journal = "Monthly Notices of the Royal Astronomical Society",
-  issn = "0035-8711",
-  publisher = "Oxford University Press",
+author = {Hartley, P. and Flamary, R. and Jackson, N. and Tagore, A. S. and Metcalf, R. B.},
+title = {Support vector machine classification of strong gravitational lenses},
+journal = {Monthly Notices of the Royal Astronomical Society},
+volume = {471},
+number = {3},
+pages = {3378-3397},
+year = {2017},
+doi = {10.1093/mnras/stx1733},
+URL = { + http://dx.doi.org/10.1093/mnras/stx1733},
+eprint = {/oup/backfile/content_public/journal/mnras/471/3/10.1093_mnras_stx1733/2/stx1733.pdf}
 }
-
 
 @ARTICLE{2007A&A...461..813C,
    author = {{Cabanac}, R.~A. and {Alard}, C. and {Dantel-Fort}, M. and {Fort}, B. and 
@@ -1364,3 +1366,87 @@ archivePrefix = "arXiv",
    adsurl = {http://cdsads.u-strasbg.fr/abs/2014MNRAS.439.3392P},
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
+
+@ARTICLE{2015MNRAS.452..502G,
+   author = {{Geach}, J.~E. and {More}, A. and {Verma}, A. and {Marshall}, P.~J. and 
+	{Jackson}, N. and {Belles}, P.-E. and {Beswick}, R. and {Baeten}, E. and 
+	{Chavez}, M. and {Cornen}, C. and {Cox}, B.~E. and {Erben}, T. and 
+	{Erickson}, N.~J. and {Garrington}, S. and {Harrison}, P.~A. and 
+	{Harrington}, K. and {Hughes}, D.~H. and {Ivison}, R.~J. and 
+	{Jordan}, C. and {Lin}, Y.-T. and {Leauthaud}, A. and {Lintott}, C. and 
+	{Lynn}, S. and {Kapadia}, A. and {Kneib}, J.-P. and {Macmillan}, C. and 
+	{Makler}, M. and {Miller}, G. and {Monta{\~n}a}, A. and {Mujica}, R. and 
+	{Muxlow}, T. and {Narayanan}, G. and {O'Briain}, D. and {O'Brien}, T. and 
+	{Oguri}, M. and {Paget}, E. and {Parrish}, M. and {Ross}, N.~P. and 
+	{Rozo}, E. and {Rusu}, C.~E. and {Rykoff}, E.~S. and {Sanchez-Arg{\"u}elles}, D. and 
+	{Simpson}, R. and {Snyder}, C. and {Schloerb}, F.~P. and {Tecza}, M. and 
+	{Wang}, W.-H. and {Van Waerbeke}, L. and {Wilcox}, J. and {Viero}, M. and 
+	{Wilson}, G.~W. and {Yun}, M.~S. and {Zeballos}, M.},
+    title = "{The Red Radio Ring: a gravitationally lensed hyperluminous infrared radio galaxy at z = 2.553 discovered through the citizen science project SPACE WARPS}",
+  journal = {\mnras},
+archivePrefix = "arXiv",
+   eprint = {1503.05824},
+ keywords = {methods: miscellaneous, galaxies: high-redshift},
+     year = 2015,
+    month = sep,
+   volume = 452,
+    pages = {502-510},
+      doi = {10.1093/mnras/stv1243},
+   adsurl = {http://ukads.nottingham.ac.uk/abs/2015MNRAS.452..502G},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2011ApJ...729...34B,
+   author = {{Blackburne}, J.~A. and {Pooley}, D. and {Rappaport}, S. and 
+	{Schechter}, P.~L.},
+    title = "{Sizes and Temperature Profiles of Quasar Accretion Disks from Chromatic Microlensing}",
+  journal = {\apj},
+archivePrefix = "arXiv",
+   eprint = {1007.1665},
+ primaryClass = "astro-ph.CO",
+ keywords = {accretion, accretion disks, gravitational lensing: strong, quasars: general},
+     year = 2011,
+    month = mar,
+   volume = 729,
+      eid = {34},
+    pages = {34},
+      doi = {10.1088/0004-637X/729/1/34},
+   adsurl = {http://ukads.nottingham.ac.uk/abs/2011ApJ...729...34B},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2008ApJ...689..755M,
+   author = {{Morgan}, C.~W. and {Kochanek}, C.~S. and {Dai}, X. and {Morgan}, N.~D. and 
+	{Falco}, E.~E.},
+    title = "{X-Ray and Optical Microlensing in the Lensed Quasar PG 1115+080}",
+  journal = {\apj},
+archivePrefix = "arXiv",
+   eprint = {0802.1210},
+ keywords = {accretion, accretion disks, dark matter, gravitational lensing, quasars: individual: PG 1115+080},
+     year = 2008,
+    month = dec,
+   volume = 689,
+      eid = {755-761},
+    pages = {755-761},
+      doi = {10.1086/592767},
+   adsurl = {http://ukads.nottingham.ac.uk/abs/2008ApJ...689..755M},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2008ApJ...673...34P,
+   author = {{Poindexter}, S. and {Morgan}, N. and {Kochanek}, C.~S.},
+    title = "{The Spatial Structure of an Accretion Disk}",
+  journal = {\apj},
+archivePrefix = "arXiv",
+   eprint = {0707.0003},
+ keywords = {accretion, accretion disks, gravitational lensing, quasars: individual: HE 1104-1805},
+     year = 2008,
+    month = jan,
+   volume = 673,
+      eid = {34-38},
+    pages = {34-38},
+      doi = {10.1086/524190},
+   adsurl = {http://ukads.nottingham.ac.uk/abs/2008ApJ...673...34P},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
