--- a/references.bib
+++ b/references.bib
@@ -1,3 +1,42 @@
+@book{wiener1964extrapolation,
+  title={Extrapolation, interpolation, and smoothing of stationary time series: with engineering applications},
+  author={Wiener, N.},
+  lccn={49010329},
+  series={Technology press books in science and engineering},
+  url={https://books.google.com.br/books?id=A6QgAAAAMAAJ},
+  year={1964},
+  publisher={Technology Press of the Massachusetts Institute of Technology}
+}
+
+@article{rebentrost2014quantum,
+  title={Quantum support vector machine for big data classification},
+  author={Rebentrost, Patrick and Mohseni, Masoud and Lloyd, Seth},
+  journal={Physical review letters},
+  volume={113},
+  number={13},
+  pages={130503},
+  year={2014},
+  publisher={APS}
+}
+
+@ARTICLE{2017A&A...597A.135B,
+   author = {{Bom}, C.~R. and {Makler}, M. and {Albuquerque}, M.~P. and {Brandt}, C.~H.
+	},
+    title = "{A neural network gravitational arc finder based on the Mediatrix filamentation method}",
+  journal = {\aap},
+archivePrefix = "arXiv",
+   eprint = {1607.04644},
+ keywords = {gravitational lensing: strong, techniques: image processing, methods: numerical},
+     year = 2017,
+    month = jan,
+   volume = 597,
+      eid = {A135},
+    pages = {A135},
+      doi = {10.1051/0004-6361/201629159},
+   adsurl = {http://adsabs.harvard.edu/abs/2017A%26A...597A.135B},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
 @article{hartley2017support,
 author = {Hartley, P. and Flamary, R. and Jackson, N. and Tagore, A. S. and Metcalf, R. B.},
 title = {Support vector machine classification of strong gravitational lenses},
