--- a/references.bib
+++ b/references.bib
@@ -1,3 +1,74 @@
+@article{LeCun2015,
+abstract = {Deep learning allows computational models that are composed of multiple processing layers to learn representations of data with multiple levels of abstraction. These methods have dramatically improved the state-of-the-art in speech recognition, visual object recognition, object detection and many other domains such as drug discovery and genomics. Deep learning discovers intricate structure in large data sets by using the backpropagation algorithm to indicate how a machine should change its internal parameters that are used to compute the representation in each layer from the representation in the previous layer. Deep convolutional nets have brought about breakthroughs in processing images, video, speech and audio, whereas recurrent nets have shone light on sequential data such as text and speech.},
+annote = {NULL},
+archivePrefix = {arXiv},
+arxivId = {arXiv:1312.6184v5},
+author = {LeCun, Yann and Bengio, Yoshua and Hinton, Geoffrey},
+doi = {10.1038/nature14539},
+eprint = {arXiv:1312.6184v5},
+file = {:home/francois/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/LeCun, Bengio, Hinton - 2015 - Deep learning.pdf:pdf},
+isbn = {9780521835688},
+issn = {0028-0836},
+journal = {Nature},
+number = {7553},
+pages = {436--444},
+pmid = {10463930},
+title = {{Deep learning}},
+url = {http://dx.doi.org/10.1038/nature14539},
+volume = {521},
+year = {2015}
+}
+@ARTICLE{Lanusse2017,
+   author = {{Lanusse}, F. and {Ma}, Q. and {Li}, N. and {Collett}, T.~E. and 
+	{Li}, C.-L. and {Ravanbakhsh}, S. and {Mandelbaum}, R. and {Poczos}, B.
+	},
+    title = "{CMU DeepLens: Deep Learning For Automatic Image-based Galaxy-Galaxy Strong Lens Finding}",
+  journal = {ArXiv e-prints},
+archivePrefix = "arXiv",
+   eprint = {1703.02642},
+ primaryClass = "astro-ph.IM",
+ keywords = {Astrophysics - Instrumentation and Methods for Astrophysics, Astrophysics - Cosmology and Nongalactic Astrophysics, Astrophysics - Astrophysics of Galaxies},
+     year = 2017,
+    month = mar,
+   adsurl = {http://adsabs.harvard.edu/abs/2017arXiv170302642L},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+@article{He2016,
+abstract = {Deep residual networks have emerged as a family of extremely deep architectures showing compelling accuracy and nice convergence behaviors. In this paper, we analyze the propagation formulations behind the residual building blocks, which suggest that the forward and backward signals can be directly propagated from one block to any other block, when using identity mappings as the skip connections and after-addition activation. A series of ablation experiments support the importance of these identity mappings. This motivates us to propose a new residual unit, which makes training easier and improves generalization. We report improved results using a 1001-layer ResNet on CIFAR-10 (4.62{\%} error) and CIFAR-100, and a 200-layer ResNet on ImageNet. Code is available at: https://github.com/KaimingHe/resnet-1k-layers},
+annote = {NULL},
+archivePrefix = {arXiv},
+arxivId = {1603.05027},
+author = {He, Kaiming and Zhang, Xiangyu and Ren, Shaoqing and Sun, Jian},
+eprint = {1603.05027},
+file = {:home/francois/Downloads/1603.05027v3.pdf:pdf},
+journal = {ArXiv e-prints},
+month = {mar},
+number = {1},
+pages = {1--15},
+title = {{Identity Mappings in Deep Residual Networks}},
+url = {https://github.com/KaimingHe/resnet-1k-layers http://arxiv.org/abs/1603.05027},
+year = {2016}
+}
+@inproceedings{He2015a,
+abstract = {Rectified activation units (rectifiers) are essential for state-of-the-art neural networks. In this work, we study rectifier neural networks for image classification from two aspects. First, we propose a Parametric Rectified Linear Unit (PReLU) that generalizes the traditional rectified unit. PReLU improves model fitting with nearly zero extra computational cost and little overfitting risk. Second, we derive a robust initialization method that particularly considers the rectifier nonlinearities. This method enables us to train extremely deep rectified models directly from scratch and to investigate deeper or wider network architectures. Based on our PReLU networks (PReLU-nets), we achieve 4.94{\%} top-5 test error on the ImageNet 2012 classification dataset. This is a 26{\%} relative improvement over the ILSVRC 2014 winner (GoogLeNet, 6.66{\%}). To our knowledge, our result is the first to surpass human-level performance (5.1{\%}, Russakovsky et al.) on this visual recognition challenge.},
+annote = {NULL},
+archivePrefix = {arXiv},
+arxivId = {1502.01852},
+author = {He, Kaiming and Zhang, Xiangyu and Ren, Shaoqing and Sun, Jian},
+booktitle = {2015 IEEE International Conference on Computer Vision (ICCV)},
+doi = {10.1109/ICCV.2015.123},
+eprint = {1502.01852},
+file = {:home/francois/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/He et al. - 2015 - Delving Deep into Rectifiers Surpassing Human-Level Performance on ImageNet Classification.pdf:pdf},
+isbn = {978-1-4673-8391-2},
+issn = {15505499},
+month = {dec},
+pages = {1026--1034},
+publisher = {IEEE},
+title = {{Delving Deep into Rectifiers: Surpassing Human-Level Performance on ImageNet Classification}},
+url = {http://arxiv.org/abs/1502.01852 http://ieeexplore.ieee.org/document/7410480/},
+volume = {abs/1502.0},
+year = {2015}
+}
 @book{wiener1964extrapolation,
   title={Extrapolation, interpolation, and smoothing of stationary time series: with engineering applications},
   author={Wiener, N.},
